--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "6.14.4",
-    "node": "12.6.1"
+    "npm": "6.14.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
